--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "phpunit/phpunit": "^9.5"
     },
     "require": {
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "ext-json": "*"
     }
 }
